--- a/.github/workflows/action.yml
+++ b/.github/workflows/action.yml
@@ -18,5 +18,5 @@ jobs:
       - name: Build the project
         run: npm run build
 
-      - name: Start the server
-        run: npm run start
+      - name: Deploy project to Vercel
+        run: npm run vercel --prod
