--- a/package.json
+++ b/package.json
@@ -10,22 +10,27 @@
   },
   "dependencies": {
     "@phosphor-icons/react": "^2.0.9",
+    "@prisma/client": "^4.14.1",
+    "@radix-ui/react-tooltip": "^1.0.5",
     "@types/node": "18.16.3",
     "@types/react": "18.2.5",
     "@types/react-dom": "18.2.3",
     "autoprefixer": "10.4.14",
     "eslint": "8.39.0",
     "eslint-config-next": "13.4.0",
+    "lucide-react": "^0.220.0",
     "next": "13.4.0",
     "next-themes": "^0.2.1",
     "postcss": "8.4.23",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "tailwindcss": "3.3.2",
-    "typescript": "5.0.4"
+    "typescript": "5.0.4",
+    "zod": "^3.21.4"
   },
   "devDependencies": {
     "@rocketseat/eslint-config": "^1.2.0",
-    "prettier-plugin-tailwindcss": "^0.3.0"
+    "prettier-plugin-tailwindcss": "^0.3.0",
+    "prisma": "^4.14.1"
   }
 }
