All Files Commit

--- a/.env
+++ b/.env
@@ -5,3 +5,8 @@
 # See the documentation for all the connection string options: https://pris.ly/d/connection-strings
 
 DATABASE_URL="file:./dev.db"
+
+NEXT_PUBLIC_SECRET_ADMIN='tunnesfolio'
+
+NEXT_PUBLIC_GH_CLIENT_ID='6b88eacb74605c255737'
+NEXT_PUBLIC_GH_CLIENT_SECRET='6951c13cd695f619c580bffbd91c10ad9c1caed3'
