--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@hookform/resolvers": "^3.1.0",
+    "@next-auth/prisma-adapter": "^1.0.6",
     "@phosphor-icons/react": "^2.0.9",
     "@prisma/client": "^4.14.1",
     "@radix-ui/react-tooltip": "^1.0.5",
@@ -16,20 +18,28 @@
     "@types/react": "18.2.5",
     "@types/react-dom": "18.2.3",
     "autoprefixer": "10.4.14",
+    "axios": "^1.4.0",
+    "bcrypt": "^5.1.0",
     "eslint": "8.39.0",
     "eslint-config-next": "13.4.0",
     "lucide-react": "^0.220.0",
     "next": "13.4.0",
+    "next-auth": "^4.22.1",
     "next-themes": "^0.2.1",
+    "nookies": "^2.5.2",
     "postcss": "8.4.23",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-hook-form": "^7.43.9",
+    "react-toastify": "^9.1.3",
+    "svgjson": "^2.2.3",
     "tailwindcss": "3.3.2",
     "typescript": "5.0.4",
     "zod": "^3.21.4"
   },
   "devDependencies": {
     "@rocketseat/eslint-config": "^1.2.0",
+    "@types/bcrypt": "^5.0.0",
     "prettier-plugin-tailwindcss": "^0.3.0",
     "prisma": "^4.14.1"
   }
