--- a/.github/workflows/action.yml
+++ b/.github/workflows/action.yml
@@ -1,21 +1,38 @@
-name: Deploy to production
+name: Deploy to Vercel
 env:
-  VERCEL_ORG_ID: ${{ secrets.VERCEL_ORG_ID }}
-  VERCEL_PROJECT_ID: ${{ secrets.VERCEL_PROJECT_ID }}
+  DATABASE_URL: ${{ secrets.DATABASE_URL }}
 on:
   push:
     branches:
-      - main
+      - master
+
 jobs:
-  Deploy:
+  deploy:
     runs-on: ubuntu-latest
+
     steps:
-      - uses: actions/checkout@v2
-      - name: Install Vercel CLI
-        run: npm install --global vercel@latest prisma
-      - name: Pull Vercel Environment Information
-        run: vercel pull --yes --environment=production --token=${{ secrets.VERCEL_TOKEN }}
-      - name: Build Project Artifacts
-        run: prisma generate && vercel build --prod --token=${{ secrets.VERCEL_TOKEN }}
-      - name: Deploy Project Artifacts to Vercel
-        run: vercel deploy --prebuilt --prod --token=${{ secrets.VERCEL_TOKEN }}
+      - name: Checkout repository
+        uses: actions/checkout@v2
+
+      - name: Set up Node.js
+        uses: actions/setup-node@v2
+        with:
+          node-version: 14
+
+      - name: Install Prisma CLI
+        run: npm install --global prisma
+
+      - name: Install dependencies
+        run: npm ci
+
+      - name: Build Next.js application
+        run: |
+          npm run build
+          npx prisma generate
+
+      - name: Deploy to Vercel
+        uses: amondnet/vercel-action@v20
+        with:
+          vercel-token: ${{ secrets.VERCEL_TOKEN }}
+          vercel-org-id: ${{ secrets.VERCEL_ORG_ID }} # Substitua pelo ID da sua organização
+          vercel-project-id: ${{ secrets.VERCEL_PROJECT_ID }} # Substitua pelo ID do seu projeto
