--- a/.github/workflows/action.yml
+++ b/.github/workflows/action.yml
@@ -31,8 +31,8 @@ jobs:
           npx prisma generate
 
       - name: Deploy to Vercel
-        uses: amondnet/vercel-action@v20
-        with:
+        run: vercel deploy
+        env:
           vercel-token: ${{ secrets.VERCEL_TOKEN }}
           vercel-org-id: ${{ secrets.VERCEL_ORG_ID }} # Substitua pelo ID da sua organização
           vercel-project-id: ${{ secrets.VERCEL_PROJECT_ID }} # Substitua pelo ID do seu projeto
