Add NextAuth Secret in env

--- a/.env
+++ b/.env
@@ -6,7 +6,7 @@
 
 DATABASE_URL="mysql://root:root@localhost:3306/portfolio"
 
-NEXT_PUBLIC_SECRET_ADMIN='tunnesfolio'
+NEXTAUTH_SECRET='tunnesfolio'
 
 NEXT_PUBLIC_GH_CLIENT_ID='6b88eacb74605c255737'
 NEXT_PUBLIC_GH_CLIENT_SECRET='6951c13cd695f619c580bffbd91c10ad9c1caed3'
