--- a/.github/workflows/action.yml
+++ b/.github/workflows/action.yml
@@ -19,20 +19,18 @@ jobs:
         with:
           node-version: 16
 
-      - name: Install Prisma CLI
-        run: npm install --global prisma
-
       - name: Install dependencies
-        run: npm ci
+        run: npm install
+
+      - name: Generate Prisma client
+        run: npx prisma generate
 
       - name: Build Next.js application
-        run: |
-          npm run build
-          npx prisma generate
+        run: npm run build
 
       - name: Deploy to Vercel
-        run: vercel deploy
-        env:
+        uses: amondnet/vercel-action@v20
+        with:
           vercel-token: ${{ secrets.VERCEL_TOKEN }}
           vercel-org-id: ${{ secrets.VERCEL_ORG_ID }} # Substitua pelo ID da sua organização
           vercel-project-id: ${{ secrets.VERCEL_PROJECT_ID }} # Substitua pelo ID do seu projeto
