--- a/.github/workflows/action.yml
+++ b/.github/workflows/action.yml
@@ -18,6 +18,9 @@ jobs:
         uses: actions/setup-node@v2
         with:
           node-version: 16
+      
+      - name: Install Vercel CLI
+        run: npm install vercel
 
       - name: Install dependencies
         run: npm install
@@ -26,11 +29,7 @@ jobs:
         run: npx prisma generate
 
       - name: Build Next.js application
-        run: npm run build
+        run: vercel build --token=${{ secrets.VERCEL_TOKEN }}
 
       - name: Deploy to Vercel
-        uses: amondnet/vercel-action@v20
-        with:
-          vercel-token: ${{ secrets.VERCEL_TOKEN }}
-          vercel-org-id: ${{ secrets.VERCEL_ORG_ID }} # Substitua pelo ID da sua organização
-          vercel-project-id: ${{ secrets.VERCEL_PROJECT_ID }} # Substitua pelo ID do seu projeto
+        run: vercel deploy --prebuilt  --token=${{ secrets.VERCEL_TOKEN }}
