--- a/.github/workflows/action.yml
+++ b/.github/workflows/action.yml
@@ -25,6 +25,9 @@ jobs:
       - name: Install dependencies
         run: npm install
 
+      - name: Pull Next CLI
+        run: vercel pull --yes --environment=preview --token=${{ secrets.VERCEL_TOKEN }}
+
       - name: Build Next.js application
         run: vercel build --token=${{ secrets.VERCEL_TOKEN }}
 
