--- a/.github/workflows/action.yml
+++ b/.github/workflows/action.yml
@@ -23,7 +23,7 @@ jobs:
         run: npm install vercel
 
       - name: Install dependencies
-        run: npm install
+        run: npm install --global
 
       - name: Build Next.js application
         run: vercel build --token=${{ secrets.VERCEL_TOKEN }}
