--- a/.env
+++ b/.env
@@ -4,7 +4,7 @@
 # Prisma supports the native connection string format for PostgreSQL, MySQL, SQLite, SQL Server, MongoDB and CockroachDB.
 # See the documentation for all the connection string options: https://pris.ly/d/connection-strings
 
-DATABASE_URL="mysql://root:root@localhost:3306/portfolio"
+DATABASE_URL="postgresql://postgres:2uAuUYGuqkBpRhjOWA65@containers-us-west-199.railway.app:6920/railway"
 
 NEXTAUTH_SECRET='tunnesfolio'
 
