--- a/package.json
+++ b/package.json
@@ -35,11 +35,13 @@
     "svgjson": "^2.2.3",
     "tailwindcss": "3.3.2",
     "typescript": "5.0.4",
+    "uuid": "^9.0.0",
     "zod": "^3.21.4"
   },
   "devDependencies": {
     "@rocketseat/eslint-config": "^1.2.0",
     "@types/bcrypt": "^5.0.0",
+    "@types/uuid": "^9.0.2",
     "prettier-plugin-tailwindcss": "^0.3.0",
     "prisma": "^4.14.1"
   }
