--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@hookform/resolvers": "^3.1.0",
     "@next-auth/prisma-adapter": "^1.0.6",
+    "@next/font": "^13.4.8",
     "@phosphor-icons/react": "^2.0.9",
     "@prisma/client": "^4.14.1",
     "@radix-ui/react-tooltip": "^1.0.5",
@@ -23,7 +24,7 @@
     "eslint": "8.39.0",
     "eslint-config-next": "13.4.0",
     "lucide-react": "^0.220.0",
-    "next": "13.4.0",
+    "next": "^13.4.8",
     "next-auth": "^4.22.1",
     "next-themes": "^0.2.1",
     "nookies": "^2.5.2",
@@ -31,6 +32,7 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-hook-form": "^7.43.9",
+    "react-tailwindcss-datepicker": "^1.6.3",
     "react-toastify": "^9.1.3",
     "svgjson": "^2.2.3",
     "tailwindcss": "3.3.2",
