--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "react-hook-form": "^7.43.9",
     "react-tailwindcss-datepicker": "^1.6.3",
     "react-toastify": "^9.1.3",
+    "sharp": "^0.32.1",
     "svgjson": "^2.2.3",
     "tailwindcss": "3.3.2",
     "typescript": "5.0.4",
