--- a/.github/workflows/action.yml
+++ b/.github/workflows/action.yml
@@ -25,6 +25,9 @@ jobs:
       - name: Install dependencies
         run: npm install --global
 
+      - name: Prisma Generate
+        run: npx prisma generate
+
       - name: Build Next.js application
         run: vercel build --token=${{ secrets.VERCEL_TOKEN }}
 
