--- a/.env
+++ b/.env
@@ -10,3 +10,5 @@ NEXTAUTH_SECRET='tunnesfolio'
 
 NEXT_PUBLIC_GH_CLIENT_ID='6b88eacb74605c255737'
 NEXT_PUBLIC_GH_CLIENT_SECRET='6951c13cd695f619c580bffbd91c10ad9c1caed3'
+
+NEXT_PUBLIC_BASE_URL='http://localhost:3000/api'
