--- a/package.json
+++ b/package.json
@@ -21,6 +21,8 @@
     "autoprefixer": "10.4.14",
     "axios": "^1.4.0",
     "bcrypt": "^5.1.0",
+    "class-variance-authority": "^0.7.0",
+    "clsx": "^2.0.0",
     "eslint": "8.39.0",
     "eslint-config-next": "13.4.0",
     "lucide-react": "^0.220.0",
@@ -36,7 +38,9 @@
     "react-toastify": "^9.1.3",
     "sharp": "^0.32.1",
     "svgjson": "^2.2.3",
+    "tailwind-merge": "^1.14.0",
     "tailwindcss": "3.3.2",
+    "tailwindcss-animate": "^1.0.6",
     "typescript": "5.0.4",
     "uuid": "^9.0.0",
     "zod": "^3.21.4"
