--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@next/font": "^13.4.8",
     "@phosphor-icons/react": "^2.0.9",
     "@prisma/client": "^4.14.1",
+    "@radix-ui/react-toast": "^1.1.4",
     "@radix-ui/react-tooltip": "^1.0.5",
     "@types/node": "18.16.3",
     "@types/react": "18.2.5",
@@ -35,7 +36,6 @@
     "react-dom": "18.2.0",
     "react-hook-form": "^7.43.9",
     "react-tailwindcss-datepicker": "^1.6.3",
-    "react-toastify": "^9.1.3",
     "sharp": "^0.32.1",
     "svgjson": "^2.2.3",
     "tailwind-merge": "^1.14.0",
