--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -2,5 +2,6 @@
   "extends": [
     "next/core-web-vitals",
     "@rocketseat/eslint-config/react"
-  ]
+  ],
+  "ignorePatterns": ["**/ui/*.tsx"]
 }
