--- a/.env
+++ b/.env
@@ -4,7 +4,7 @@
 # Prisma supports the native connection string format for PostgreSQL, MySQL, SQLite, SQL Server, MongoDB and CockroachDB.
 # See the documentation for all the connection string options: https://pris.ly/d/connection-strings
 
-DATABASE_URL="postgresql://thetunnes:thetunnes2704@localhost:6500/myportfoliodb?schema=public"
+DATABASE_URL="postgresql://thetunnes:thetunnes2704@localhost:5432/portfoliodb?schema=public"
 
 NEXTAUTH_SECRET='tunnesfolio'
 
